# GObject_tutorial_es

./: .gitignore  GObject_tutorial_es.defs.sty  GObject_tutorial_es.pkg.sty  GObject_tutorial_es.tex
portada/: portada.tex
prog/: Makefile  ejemplo01.c  ejemplo02.c  ejemplo03.c  ejemplo04.c
prog/cmake/ej0105/: CMakeLists.txt  COMPILACIÓN.txt  ejemplo04.c
prog/cmake/ej06/: CMakeLists.txt  COMPILACIÓN.txt
prog/ej0105/: ejemplo02.c  ejemplo03.c  ejemplo05.c
prog/ej0105/cmake/: CMakeLists.txt  COMPILACIÓN.txt
prog/ej0105/make/: Makefile
prog/ej0105/meson/: COMPILACIÓN.txt  meson.build
prog/ej0105/src/: ejemplo02.c  ejemplo03.c  ejemplo04.c  ejemplo05.c
prog/ej06/: Makefile  tdoble.c  tdoble.h
prog/ej06/cmake/: CMakeLists.txt  COMPILACIÓN.txt
prog/ej06/make/: Makefile
prog/ej06/meson/: COMPILACIÓN.txt  meson.build
prog/ej06/src/: main.c  tdoble.c  tdoble.h  tdouble.c  tdouble.h
prog/ej07/cmake/: CMakeLists.txt
prog/ej07/make/: Makefile
prog/ej07/meson/: Makefile  meson.build
prog/ej07/src/: main.c
prog/ej08/cmake/: CMakeLists.txt  COMPILACIÓN.txt
prog/ej08/make/: Makefile  ejemplo08
prog/ej08/meson/: meson.build
prog/ej08/src/: main.c  tdouble.c  tdouble.h
prog/ej09/cmake/: CMakeLists.txt
prog/ej09/make/: Makefile
prog/ej09/meson/: COMPILACIÓN.txt  meson.build
prog/ej09/src/: main.c  tdouble.c
prog/make/ej0105/: Makefile  ejemplo01.c
prog/meson/ej0105/: COMPILACIÓN.txt  ejemplo01.c  ejemplo02.c  ejemplo05.c  meson.build
prog/meson/ej06/: meson.build  tdoble.c
prog/operaciones/cmake/: CMakeLists.txt
prog/operaciones/make/: Makefile
prog/operaciones/meson/: meson.build
prog/operaciones/src/: main.c  tdouble.c  tdouble.h
prog/tdoble/: tdoble.h
tablacontenidos/: tablacontenidos.tex
texto/: compilacion.tex  introduccion.tex  propiedades.tex  registro.tex  señales.tex  tipos.tex
