project ('ejemplos_01-05', 'c')

gobjdep = dependency('gobject-2.0')

sourcefiles01 = files('../src/ejemplo01.c')
sourcefiles02 = files('../src/ejemplo02.c')
sourcefiles03 = files('../src/ejemplo03.c')
sourcefiles04 = files('../src/ejemplo04.c')
sourcefiles05 = files('../src/ejemplo05.c')

executable('ejemplo01', sourcefiles01, dependencies: gobjdep, install: false)
executable('ejemplo02', sourcefiles02, dependencies: gobjdep, install: false)
executable('ejemplo03', sourcefiles03, dependencies: gobjdep, install: false)
executable('ejemplo04', sourcefiles04, dependencies: gobjdep, install: false)
executable('ejemplo05', sourcefiles05, dependencies: gobjdep, install: false)
